# autoskills

./: .env.example  .gitignore  README.md  plan.md  pyproject.toml  实验脚本优化计划.md  新任务实验运行指南.md  第一次实验数据设计-software-dependency-audit-20260413.md  🌟🌟实验框架设计-20260412.md
configs/: default.yaml  exp1_main.yaml  exp2_ablation.yaml  exp3_init.yaml  exp4_qualitative.yaml  local_mock.yaml
meta_skills/skill_mutator/: SKILL.md
meta_skills/skill_mutator/scripts/: contracts.py  skill_checks.py  trace_tools.py
scripts/: download_baselines.py  download_skill_pools.py  download_skillsbench.py  run_exoplanet_pilot.py  run_experiment.py  run_parallel_tfidf_pilot.py  run_software_dependency_audit_pilot.py  smoke_phase1.py
src/apo_skillsmd/: __init__.py  config.py  types.py
src/apo_skillsmd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/apo_skillsmd/agent/: __init__.py  loop.py  prompt.py  tools.py  trace_emitter.py
src/apo_skillsmd/bench/: __init__.py  baselines.py  pool_sources.py  skillsbench.py
src/apo_skillsmd/evolution/: __init__.py  crossover.py  escape.py  init_pool.py  loop.py  mutation.py  mutation_agent.py  pareto.py  retrieval.py  slot_align.py
src/apo_skillsmd/experiments/: __init__.py  aggregate.py  base.py  exp1_main.py  exp2_ablation.py  exp3_init.py  exp4_qualitative.py
src/apo_skillsmd/llm/: __init__.py  anthropic.py  base.py  cache.py  factory.py  gemini.py  minimax.py  openai.py  (+2 more)
tests/: __init__.py  test_agent_loop_mock.py  test_evolution_small.py  test_mutation_agent.py  test_openai_compatible_llm.py
tests/fixtures/: mock_task.json
(+22 files in other folders)
